--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,34 @@
 [package]
+authors = ["Timothy Aldrich <timothy.r.aldrich@gmail.com"]
+description = "Use a collection of markdown files as a database"
+homepage = "https://github.com/aldrichtr/mddb"
+repository = "https://github.com/aldrichtr/mddb"
 name = "mddb"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# file system
+glob = "0.3.1"
+
+# serialization
+serde = "1.0.204"
+serde_derive = "1.0.204"
+
+
+# markdown processing
+markdown-it = "0.6.1"
+markdown-it-tasklist = "0.2.0"
+markdown-it-front-matter = "0.3.0"
+serde_yml = "0.0.11"
+
+# Abstract Syntax Tree
+tree-ds = "0.1"
+
+# Node Ids
+nanoid = "0.4.0"
+uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
+regex = "1.10.5"
+
+[dev-dependencies]
+nextest = "0.0.0"
