--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ thiserror = "1.0.63"
 pathdiff = "0.2.1"
 log = { version = "0.4.22", features = ["kv", "max_level_trace", "release_max_level_info", "std"] }
 normalize-path = "0.2.1"
+shellexpand = "3.1.0"
 
 [dev-dependencies]
 k9 = "0.12.0"
